[project]
name = "policy-rag-chatbot"
version = "0.1.0"
description = "Multi-Category Policy RAG Chatbot — Streamlit + LangGraph + Qdrant + Groq"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit",
  "langgraph",
  "langchain-core",
  "langchain-text-splitters",
  "langchain-qdrant",
  "langchain-cohere",
  "langchain-groq",
  "qdrant-client",
  "groq",
  "cohere",
  "pymupdf",
  "pdfplumber",
  "boto3",
  "logfire",
  "httpx",
  "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]
